Improve charts, add axis labels, add mark line, add update via addData, fix layout issues

--- a/public/styles.css
+++ b/public/styles.css
@@ -494,7 +494,7 @@ select {
 }
 
 .trade-chart {
-    margin: 1rem auto;
+    margin-bottom: 1rem;
 }
 
 .mobile-form {
